tests/snapshots/integration_tests__stdlib_TransformerStack.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron SequentialTransformer(d_model, num_heads, d_ff):
  inputs:
    default: [*, d_model]
  outputs:
    default: [*, d_model]
  graph:
    in -> SimpleTransformerBlock#2(d_model)
    SimpleTransformerBlock#2(d_model) -> out

neuron TransformerStack2(d_model, num_heads, d_ff):
  inputs:
    default: [*, d_model]
  outputs:
    default: [*, d_model]
  graph:
    in -> SimpleTransformerBlock#0(d_model)
    SimpleTransformerBlock#0(d_model) -> SimpleTransformerBlock#1(d_model)
    SimpleTransformerBlock#1(d_model) -> out
