tests/snapshots/integration_tests__stdlib_ViTBlock.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron ViTBlock(dim, num_heads, expansion, dropout_rate):
  inputs:
    default: [batch, seq, dim]
  outputs:
    default: [batch, seq, dim]
  graph:
    in -> (attn_path, skip1)
    attn_path -> LayerNorm#0(dim)
    LayerNorm#0(dim) -> MultiHeadSelfAttention#1(dim, num_heads)
    MultiHeadSelfAttention#1(dim, num_heads) -> Dropout#2(dropout_rate)
    Dropout#2(dropout_rate) -> attn_out
    (attn_out, skip1) -> Add#3()
    Add#3() -> attn_residual
    attn_residual -> (ffn_path, skip2)
    ffn_path -> LayerNorm#4(dim)
    LayerNorm#4(dim) -> Linear#5(dim, expansion)
    Linear#5(dim, expansion) -> GELU#6()
    GELU#6() -> Linear#7(expansion, dim)
    Linear#7(expansion, dim) -> Dropout#8(dropout_rate)
    Dropout#8(dropout_rate) -> ffn_out
    (ffn_out, skip2) -> Add#9()
    Add#9() -> out
