tests/snapshots/integration_tests__stdlib_primitives_AdaptiveMaxPool.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron AdaptiveMaxPool(output_size):
  inputs:
    default: [batch, channels, *, *]
  outputs:
    default: [batch, channels, output_size, output_size]
  impl:
    Source: core,pooling/AdaptiveMaxPool
