tests/snapshots/integration_tests__stdlib_primitives_AvgPool.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron AvgPool(kernel_size, stride = 1, padding = 0):
  inputs:
    default: [batch, channels, height, width]
  outputs:
    default: [batch, channels, *, *]
  impl:
    Source: core,pooling/AvgPool
