tests/snapshots/integration_tests__stdlib_primitives_Bias.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Bias(dim):
  inputs:
    default: [*batch, dim]
  outputs:
    default: [*batch, dim]
  impl:
    Source: core,operations/Bias
