tests/snapshots/integration_tests__stdlib_primitives_Cast.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Cast(dtype):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,structural/Cast
